# mchat-master

mchat-master/: CMakeLists.txt  build_instructions  configure
mchat-master/src/: curses_ui.c  curses_ui.h  curses_ui_builtin_cmds.c  curses_ui_defaults.c  curses_ui_defaults.h  curses_ui_internal.h  main.c
